<resources>
    <string name="app_name">PN4C</string>

    <string-array name="Genders_array">
        <item>Male</item>
        <item>Female</item>
        <item>Homosexual</item>
    </string-array>

    <string-array name="array_feelings">
        <item>Successful</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Excited</item>
        <item>Dead</item>
        <item>Dissapointed</item>
        <item>Lonely</item>
    </string-array>

    <string name="Content">Content</string>
    <string name="NickName">NickName</string>
    <string name="Title">Title</string>

    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="RePassword">Re-Password</string>
    <string name="Age">Age</string>
    <string name="Relax">Relax</string>
    <string name="Gender">Gender</string>

    <string name="loginbutton">Login Page</string>

    <string name="Login">Login</string>
    <string name="SignUp">Sign up</string>
    <string name="Search">Search</string>

    <!-- Content Description -->
    <string name="AppLogo">AppLogo</string>
    <string name="title_activity_home">HomeAct</string>
    <string name="action_settings">Settings</string>

</resources>
