<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:weightSum="1"
    tools:context="com.example.enes.pn4c.MainActivity">

    <ImageView
        android:id="@+id/ivlogo"
        android:layout_width="0dp"
        android:layout_height="124dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0.43"
        android:contentDescription="@string/AppLogo"
        android:src="@drawable/pn4clogo"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etEmail1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:ems="10"
        android:hint="@string/Email"
        android:text="@string/Email"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivlogo"
        app:layout_constraintVertical_bias="0.14999998" />

    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:text="@string/Password"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail1"
        app:layout_constraintVertical_bias="0.14999998"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword1"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/btnLogin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword1"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/search1"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />


</android.support.constraint.ConstraintLayout>

