<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="100dp">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/content"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/Title"
                android:textColor="@color/cardview_dark_background"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="0dp"
                android:paddingTop="8dp"
                android:text="@string/NickName"
                android:textColor="@color/cardview_dark_background"
                />

            <ImageView
                android:id="@+id/image_post"
                android:layout_width="379dp"
                android:layout_height="105dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/AppLogo"
                />

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="0dp"
                android:paddingStart="8dp"
                android:text="@string/Content"
                android:textColor="@color/cardview_dark_background"
                android:textSize="15sp"
                />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>